manifest/deployment_load.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s3image-app-load
  labels:
    app.kubernetes.io/name: s3-image-uploader
    app.kubernetes.io/instance: s3-image-k6load
    app.kubernetes.io/component: load
    app.kubernetes.io/version: "0.0.1"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: s3-image-uploader
      app.kubernetes.io/instance: s3-image-k6load
      app.kubernetes.io/component: load
  template:
    metadata:
      labels:
        app.kubernetes.io/name: s3-image-uploader
        app.kubernetes.io/instance: s3-image-k6load
        app.kubernetes.io/component: load
    spec:
      containers:
        - name: s3k6load
          image: hrexed/node-aws-s3-k6:0.1
          imagePullPolicy: Always
          resources:
            limits:
              memory: 120Mi
