manifest/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adot-imageuploader-client-svc
  labels:
    app.kubernetes.io/name: s3-image-uploader
    app.kubernetes.io/instance: webclient
    app.kubernetes.io/component: front
    app.kubernetes.io/version: "0.0.1"
spec:
  type: ClusterIP
  ports:
    - port: 7000
      name: service
      targetPort: 7000
  selector:
    app.kubernetes.io/name: s3-image-uploader
    app.kubernetes.io/instance: webclient
    app.kubernetes.io/component: front
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adot-imageuploader-client
  labels:
    app.kubernetes.io/name: s3-image-uploader
    app.kubernetes.io/instance: webclient
    app.kubernetes.io/component: front
    app.kubernetes.io/version: "0.0.1"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: s3-image-uploader
      app.kubernetes.io/instance: webclient
      app.kubernetes.io/component: front
  template:
    metadata:
      labels:
        app.kubernetes.io/name: s3-image-uploader
        app.kubernetes.io/instance: webclient
        app.kubernetes.io/component: front
      annotations:
        sidecar.opentelemetry.io/inject: "true"
    spec:
      containers:
        - name: webclient
          image: 'hrexed/node-aws-s3-upload:0.1'
          imagePullPolicy: Always
          resources:
            limits:
              memory: 60Mi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: s3-imageuploader-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: adot-imageuploader-client-svc
                port:
                  number: 7000
